# Fraud_detection_api

./: Dockerfile  README.md  main.py  pyproject.toml
app/: main.py  predictor.py  schema.py
model/: Credit_Card_Fraud_Detection.ipynb  fraud_pipeline.pkl
